# tree-sitter-quint

./: .gitignore  Cargo.toml  README.md  flake.nix  grammar.js  grammar.json  node-types.json  package.json  parse-all-examples.sh  tree-sitter.json
.github/workflows/: release.yml
bindings/rust/: build.rs  lib.rs
examples/: bank.qnt  counter.qnt
queries/: helix-highlights.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  expressions.txt  module-level-constructs.txt
